k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: pr-tracker
  labels:
    app: pr-tracker
    environment: production
